solucion: Review from Taihú 07/Apr/2017
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/preamble.tex
+++ b/preamble.tex
@@ -23,6 +23,7 @@
 \newcommand{\worldPoint}{\point^{\mathrm{w}}}
 \newcommand{\homoWorldPoint}{\homo{\point}^{\mathrm{w}}}
 \newcommand{\cameraPoint}{\point^{\mathrm{c}}}
+\newcommand{\hatCameraPoint}{\hat{\point}^{\mathrm{c}}}
 \newcommand{\homoCameraPoint}{\homo{\point}^{\mathrm{c}}}
 \newcommand{\measurement}{\vec{z}}
 \newcommand{\prediction}{\hat{\vec{z}}}
