--- a/tesis.lyx
+++ b/tesis.lyx
@@ -160,7 +160,7 @@ materia{}
 
 
 \backslash
-director{Pire, Taihú}{tpire@dc.uba.ar}
+director{Pire, Taihú}{pire@cifasis-conicet.gov.ar}
 \end_layout
 
 \begin_layout Plain Layout
