--- a/solucion.lyx
+++ b/solucion.lyx
@@ -1,9 +1,7 @@
 #LyX 2.2 created this file. For more info see http://www.lyx.org/
-\lyxformat 508
+\lyxformat 474
 \begin_document
 \begin_header
-\save_transient_properties true
-\origin unavailable
 \textclass book
 \begin_preamble
 \usepackage[utf8]{inputenc}
@@ -30,16 +28,16 @@ figs-within-sections
 \language_package default
 \inputencoding utf8
 \fontencoding global
-\font_roman "default" "default"
-\font_sans "default" "default"
-\font_typewriter "default" "default"
-\font_math "auto" "auto"
+\font_roman default
+\font_sans default
+\font_typewriter default
+\font_math auto
 \font_default_family default
 \use_non_tex_fonts false
 \font_sc false
 \font_osf false
-\font_sf_scale 100 100
-\font_tt_scale 100 100
+\font_sf_scale 100
+\font_tt_scale 100
 \graphics pdftex
 \default_output_format default
 \output_sync 0
@@ -431,7 +429,7 @@ name "sec:hilo-mapa-de-disparidad"
 Como se analizó en las secciones 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "subsec:Densificación-de-métodos"
+reference "sub:Densificación-de-métodos"
 
 \end_inset
 
@@ -621,7 +619,7 @@ en vez de filtrar todo el mapa deberías usar los KFs covisibles y luego
 Como se vio en la sección 
 \begin_inset CommandInset ref
 LatexCommand ref
-reference "subsec:Frustum-culling"
+reference "sub:Frustum-culling"
 
 \end_inset
 
